--- a/MapoTero/Form1.resx
+++ b/MapoTero/Form1.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>399, 3</value>
+  </metadata>
+  <data name="ListBox1.ToolTip" xml:space="preserve">
+    <value>Wskaż wybraną warst klikając na nią lewym klawiszem myszki. Nakładanie wielu warstw na siebie ma sens gdy warstwa posiada przeźroczyste tło (np obrzary_chronione), bądź gdy nie pokrywa całego obszaru (np. niekompletne skany map 1:10 000 w układzie 1992 podkładamy kompletnym zbiorem map z ukł 1965).</value>
+  </data>
   <metadata name="FolderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>26, 1</value>
   </metadata>
