--- a/MapoTero_v3/My Project/Resources.resx
+++ b/MapoTero_v3/My Project/Resources.resx
@@ -121,8 +121,11 @@
   <data name="MapoTero" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MapoTero.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="kanapka_gis" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\kanapka_gis.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="siatka" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\siatka.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
