--- a/MapoTero_v3/My Project/Resources.resx
+++ b/MapoTero_v3/My Project/Resources.resx
@@ -127,15 +127,17 @@
   <data name="kanapka_gis1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\kanapka_gis.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-
-  <data name="MapoTero" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MapoTero.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ico_folder" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ico_folder.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ico_merge" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ico_merge.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MapoTero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MapoTero.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="ico_folder" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ico_folder.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="kosz" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kosz.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
