--- a/MapoTero_v3/usuwanie_p_seg.resx
+++ b/MapoTero_v3/usuwanie_p_seg.resx
@@ -130,6 +130,9 @@ Aby usunąć puste segmenty sprawdź jaki jest rozmiar pojedyńczego pustego seg
 
 Po usunięciu pustych segmentów możemy automatycznie uzupełnić brakujące obszary, poprzez ponowne wznowienie sesji pobierania. MapoTero automatycznie wykryje których segmentów brakuje i podejmie ponowną próbę ich pobrania. </value>
   </data>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>177, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
