--- a/MapoTero_v3/My Project/Resources.resx
+++ b/MapoTero_v3/My Project/Resources.resx
@@ -127,6 +127,9 @@
   <data name="ico_folder" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ico_folder.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ico_folde_delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ico_folde_delete.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="siatka" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\siatka.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,5 +142,5 @@
   <data name="MapoTero" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MapoTero.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+
 </root>
